<resources>
    <string name="order_text">Order</string>
    <string name="settings_text">Settings</string>
    <string name="maincourses_text">Main Courses</string>
    <string name="desserts_text">Desserts</string>
    <string name="salads_text">Salads</string>
    <string name="snacks_text">Snacks</string>
    <string name="pasta_text">Pasta</string>
    <string name="app_name">QuickFood</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="Registration_Mistake1">Email address or password is wrong</string>
    <string name="Registration_Mistake2">Fields can not be empty</string>
    <string name="dev1">Application Developers:</string>
    <string name="dev2">Jonas Ebid</string>
    <string name="dev20">Bachelor of Information Technology student Jonas Ebid</string>
    <string name="dev3">Bereket Atobrhan Abrha</string>
    <string name="dev30">Bachelor of Information Technology student Bereket Atobrhan Abrha</string>
    <string name="dev4">Daniel Tsehaie Ogbazion</string>
    <string name="dev40">Bachelor of Information Technology student Daniel Tsehaie Ogbazion</string>
    <string name="dev5">Aliskhan Taramov</string>
    <string name="dev50">Bachelor of Information Technology student Aliskhan Taramov</string>
    <string name="dev6">Sahatsawat Wongsurin</string>
    <string name="dev60">Bachelor of Information Technology student Sahatsawat Wongsurin</string>
    <string name="bereket_img">Bereket_img</string>
    <string name="daniel_img">Daniel_img</string>
    <string name="aliskhan_img">Aliskhan_img</string>
    <string name="sahatsawat_img">Sahatsawat</string>
    <string name="jonasebid_img">jonas_img</string>
    <string name="menu_home">Home Page</string>
    <string name="menu_drinks">Drinks</string>
    <string name="menu_main_courses">Main Courses</string>
    <string name="menu_desserts">Desserts</string>
    <string name="menu_snacks">Snaks</string>
    <string name="menu_pasta">Pasta</string>
    <string name="menu_salads">Salads</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_open" translatable="false">Open Menu</string>
    <string name="menu_close" translatable="false">Close Menu</string>
    <string name="pasta">Pasta</string>
    <string name="HomePage">Welcome To Quick Food</string>

    <string name="Hometext">In 2021, Quick Food opened its first location in downtown Hønefoss.
        Focussed entirely on serving the perfect food, the tiny take-out restaurant located in the
        citys busy Entertainment District created a sensation in the area winning praise from food
        critics and numerous peoples choice awards. Over the years, the Chef and founder of Quick Food,
        Ian Angus, together with his family and friends, have opened a select number of additional Quick Food
        restaurants.</string>
</resources>
