<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_main_courses"
            android:title="@string/menu_main_courses" />
        <item
            android:id="@+id/menu_desserts"
            android:title="@string/menu_desserts" />
        <item
            android:id="@+id/menu_pasta"
            android:title="@string/menu_pasta" />
        <item
            android:id="@+id/menu_salads"
            android:title="@string/menu_salads" />
        <item
            android:id="@+id/menu_snacks"
            android:title="@string/menu_snacks" />
        <item
            android:id="@+id/menu_order"
            android:icon="@drawable/icon_order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/menu_about_us"
            android:icon="@drawable/icon_about_us"
            android:title="@string/menu_about_us"/>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>