<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/dev1"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0.0" />

        <GridLayout
            android:id="@+id/linearLayout3"
            android:layout_width="397dp"
            android:layout_height="104dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/jonasebid_img"
                app:srcCompat="@mipmap/jonas" />
            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="103dp"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:text="@string/dev2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:text="@string/dev20" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:id="@+id/linearLayout4"
            android:layout_width="397dp"
            android:layout_height="104dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/bereket_img"
                app:srcCompat="@mipmap/bereket" />
            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="103dp"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="256dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/dev3" />
                <TextView
                    android:id="@+id/textView200"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:text="@string/dev30" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:id="@+id/linearLayout5"
            android:layout_width="397dp"
            android:layout_height="104dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/daniel_img"
                app:srcCompat="@mipmap/daniel" />
            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="103dp"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="258dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/dev4" />
                <TextView
                    android:id="@+id/textView300"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:text="@string/dev30" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:id="@+id/linearLayout6"
            android:layout_width="397dp"
            android:layout_height="104dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/aliskhan_img"
                app:srcCompat="@mipmap/aliskhan" />
            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="103dp"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="248dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dev5" />
                <TextView
                    android:id="@+id/textView400"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:text="@string/dev40" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:id="@+id/linearLayout7"
            android:layout_width="397dp"
            android:layout_height="104dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/sahatsawat_img"
                app:srcCompat="@mipmap/sahatsawat" />
            <LinearLayout
                android:layout_width="239dp"
                android:layout_height="103dp"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="248dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dev6" />
                <TextView
                    android:id="@+id/textView500"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:text="@string/dev60" />
            </LinearLayout>
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

