<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerLogin"

    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="8dp">

    <ImageView
        android:layout_width="330dp"
        android:layout_height="366dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/TextView_LoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@mipmap/logo" />

    <EditText
        android:id="@+id/TextView_LoginPassword"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TextView_LoginEmail"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/TextView_LoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="12dp"
            android:onClick="App_Login"
            android:text="@string/login"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="647dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:insetLeft="85dp"
            android:onClick="App_Signup"
            android:text="@string/sign_up"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="647dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
